# ore-private-pool-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
bin-example/: start-ore-ppl-cli.sh
src/: generate_key.rs  main.rs  mine.rs  protomine.rs
